--- a/benchmark/config.json
+++ b/benchmark/config.json
@@ -1,29 +1,175 @@
 {
     "output_dir": "simresults",
-    "replicates": [1, 2, 3, 4,5,6,7,8,9,10],
-    "sample_sizes": [[80]],
-    "av_parents":[[2]],
-    "dims": [[80]],
-    "blip":
-        {"scorer.method": "is", 
-         "solver.method": "winasobs",
-         "indeg": 6, 
-         "time": [60], 
-         "allocated": 80, 
-         "scorefunction": "bdeu",
-         "alpha": 1, 
-         "cores": 1, 
-         "verbose": 0, 
-         "bdecatpar.chi":1, 
-         "bdecatpar.edgepf":1},
-    "itsearch_map": 
-        [0, 1],
-    "pcalg":
-        {
-            "alpha": [0.01, 0.05, 0.1, 0.2, 0.35, 0.45]
+    "replicates": {
+        "start": 1,
+        "end": 2
+    },
+    "sample_sizes": [
+        [
+            80
+        ]
+    ],
+    "av_parents": [
+        [
+            2
+        ]
+    ],
+    "dims": [
+        [
+            8
+        ]
+    ],
+    "blip": {
+        "scorer.method": "is",
+        "solver.method": "winasobs",
+        "indeg": 6,
+        "time": [
+            60
+        ],
+        "allocated": 80,
+        "scorefunction": "bdeu",
+        "alpha": 1,
+        "cores": 1,
+        "verbose": 0,
+        "bdecatpar.chi": 1,
+        "bdecatpar.edgepf": 1
+    },
+    "itsearch_map": [
+        0,
+        1
+    ],
+    "gobnilp": {
+        "plot": false,
+        "palim": [
+            3,
+            4
+        ]
+    },
+    "pcalg": {
+        "alpha": [
+            0.01,
+            0.05,
+            0.1,
+            0.2,
+            0.35,
+            0.45
+        ],
+        "fixedGaps": null,
+        "fixedEdges": null,
+        "NAdelete": true,
+        "m.max": "inf",
+        "u2pd": [
+            "relaxed",
+            "rand",
+            "retry"
+        ],
+        "skel.method": [
+            "stable",
+            "original",
+            "stable.fast"
+        ],
+        "conservative": false,
+        "maj.rule": false,
+        "solve.confl": false,
+        "numCores": 1,
+        "verbose": false
+    },
+    "mmhc": {
+        "title": "mmhc",
+        "alpha": [
+            0.01,
+            0.05,
+            0.1,
+            0.2,
+            0.35,
+            0.45
+        ],
+        "whitelist": null,
+        "blacklist": null,
+        "restrict.args": {
+            "alpha": [
+                0.01,
+                0.05,
+                0.1,
+                0.2,
+                0.35,
+                0.45
+            ]
         },
-    "mmhc":
-        {
-            "alpha": [0.01, 0.05, 0.1, 0.2, 0.35, 0.45]
-        }   
+        "maximize.args": {},
+        "debug": false
+    },
+    "itsearch_mapnew": {
+        "title": "itsearch_map",
+        "optional": {
+            "plus1it": 5,
+            "moveprobs": null,
+            "MAP": 1,
+            "posterior": 0.5,
+            "iterations": null,
+            "stepsave": null,
+            "softlimit": 9,
+            "hardlimit": 12,
+            "alpha": null,
+            "gamma": 1,
+            "startspace": null,
+            "blacklist": null,
+            "verbose": true,
+            "chainout": false,
+            "scoreout": false,
+            "cpdag": false,
+            "mergetype": "skeleton",
+            "addspace": null,
+            "scoretable": null
+        },
+        "score_params": {
+            "type": "bde",
+            "bdepar": {
+                "chi": 1,
+                "edgepf": 1
+            }
+        }
+    },
+    "itsearch_sample": {
+        "title": "itsearch_sample",
+        "optional": {
+            "plus1it": 10,
+            "moveprobs": null,
+            "MAP": true,
+            "posterior": 0.5,
+            "iterations": null,
+            "stepsave": null,
+            "softlimit": 9,
+            "hardlimit": 12,
+            "alpha": null,
+            "gamma": 1,
+            "startspace": null,
+            "blacklist": null,
+            "verbose": true,
+            "chainout": true,
+            "scoreout": false,
+            "cpdag": false,
+            "mergetype": "skeleton",
+            "addspace": null,
+            "scoretable": null
+        }
+    },
+    "orderMCMC": {
+        "title": "orderMCMC",
+        "optional": {
+            "MAP": true,
+            "plus1": true,
+            "blacklist": null,
+            "scoretable": null,
+            "moveprobs": null,
+            "iterations": null,
+            "stepsave": null,
+            "alpha": null,
+            "cpdag": false,
+            "gamma": 1,
+            "chainout": false,
+            "scoreout": false,
+            "verbose": false
+        }
+    }
 }
