--- a/benchmark/Snakefile
+++ b/benchmark/Snakefile
@@ -825,21 +825,21 @@ rule fges: #use funtion as input to generate filename from the config file
         "--faithfulnessAssumed {wildcards.faithfulnessAssumed} "\
         "--filename {output.adjmat} "\
         
-        'java -jar causal-cmd-1.1.3-jar-with-dependencies.jar ' \
-        '--algorithm fges '\
-        '--data-type discrete '\
-        '--dataset {input.data} '\
-        '--delimiter comma '\
-        '--score bdeu-score '\
-        '--quote-char \" '\
-        '--json-graph '\
-        '--structurePrior 1 '\
-        '--prefix {output.adjmat} ' \
-        '&& Rscript scripts/tetrad_graph_to_adjmat.R ' \
-        '--input {output.adjmat}.json ' \
-        '--output {output.adjmat} ' \
-        '&& ' \
-        'rm {output.adjmat}.json'
+        #'java -jar causal-cmd-1.1.3-jar-with-dependencies.jar ' \
+        #'--algorithm fges '\
+        #'--data-type discrete '\
+        #'--dataset {input.data} '\
+        #'--delimiter comma '\
+        #'--score bdeu-score '\
+        #'--quote-char \" '\
+        #'--json-graph '\
+        #'--structurePrior 1 '\
+        #'--prefix {output.adjmat} ' \
+        #'&& Rscript scripts/tetrad_graph_to_adjmat.R ' \
+        #'--input {output.adjmat}.json ' \
+        #'--output {output.adjmat} ' \
+        #'&& ' \
+        #'rm {output.adjmat}.json'
 
 rule summarise_fges:
     input:
