--- a/benchmark/Snakefile
+++ b/benchmark/Snakefile
@@ -479,7 +479,7 @@ rule summarise_ordermcmc:
         "{replicate}.csv"
 
     message:
-        "Executing order mcmc algorithm with startspace on the following files: {input}."
+        "Summarizing order mcmc algorithm with startspace on the following files: {input}."
     shell: 
         "Rscript scripts/run_summarise.R " \
         "--adjmat_true {input.adjmat_true} " \
@@ -818,28 +818,29 @@ rule fges: #use funtion as input to generate filename from the config file
                 "{replicate}.txt"
     shell:
         "/usr/bin/time -f \"%e\" -o {output.time} " \  
-        "Rscript scripts/run_fges.R "\
-        "--filename_data {input.data} "\
-        "--output_dir {config[output_dir]} "\
-        "--seed {wildcards.replicate} "\
-        "--faithfulnessAssumed {wildcards.faithfulnessAssumed} "\
-        "--filename {output.adjmat} "\
-        
-        #'java -jar causal-cmd-1.1.3-jar-with-dependencies.jar ' \
-        #'--algorithm fges '\
-        #'--data-type discrete '\
-        #'--dataset {input.data} '\
-        #'--delimiter comma '\
-        #'--score bdeu-score '\
-        #'--quote-char \" '\
-        #'--json-graph '\
-        #'--structurePrior 1 '\
-        #'--prefix {output.adjmat} ' \
-        #'&& Rscript scripts/tetrad_graph_to_adjmat.R ' \
-        #'--input {output.adjmat}.json ' \
-        #'--output {output.adjmat} ' \
-        #'&& ' \
-        #'rm {output.adjmat}.json'
+#        "Rscript scripts/run_fges.R "\
+#        "--filename_data {input.data} "\
+#        "--output_dir {config[output_dir]} "\
+#        "--seed {wildcards.replicate} "\
+#        "--faithfulnessAssumed {wildcards.faithfulnessAssumed} "\
+#        "--filename {output.adjmat} "\
+        "java -jar causal-cmd-1.1.3-jar-with-dependencies.jar " \
+        "--algorithm fges "\
+        "--data-type discrete "\
+        "--dataset {input.data} "\
+        "--delimiter comma "\
+        "--score bdeu-score "\
+        #"--quote-char \" "\
+        "--json-graph "\
+        "--structurePrior 1 "\
+        "--prefix {output.adjmat} " \
+        '&& Rscript scripts/tetrad_graph_to_adjmat.R ' \
+        '--jsongraph {output.adjmat}_graph.json ' \
+        '--filename {output.adjmat} ' \
+        '&& ' \
+        'rm {output.adjmat}_graph.json ' \
+        '&& ' \
+        'rm {output.adjmat}.txt'
 
 rule summarise_fges:
     input:
@@ -893,6 +894,7 @@ rule summarise_fges:
 
 rule plot:
     input:        
+        # conf = "config.json",
         blip = [expand(config["output_dir"] + "/res/blip/"
         "n_{n}/"
         "p_{p}/"
