--- a/benchmark/config.json
+++ b/benchmark/config.json
@@ -3,7 +3,7 @@
     "data": {
         "replicates": {
             "start": 1,
-            "end": 3
+            "end": 2
         },
         "sample_sizes": [
             [
@@ -25,7 +25,7 @@
                     ],
                     "dims": [
                         [
-                            80
+                            10
                         ]
                     ]
                 }
@@ -49,7 +49,16 @@
             "gobnilp",
             "fges",
             "pcalg",
-            "mmhc"
+            "mmhc",
+            "itsearch_map",
+            "itsearch_sample",
+            "order_mcmc_map",
+            "order_mcmc_sample"
+        ],
+        "measures": [
+            {"ROC": ["blip", "gobnilp", "fges",  "pcalg"],
+            "curve_varaible": ["alpha",""],
+            "SHD": ["blip", "gobnilp"]}
         ]
     },
     "algorithms": {
